[package]
name = "zookeeper-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
byteorder = "1.4.3"
bytes = "1.4.0"
failure = "0.1.8"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec", "io"] }
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4.0"
dashmap = "5.4.0"
env_logger = "0.10.0"
log = "0.4"
tokio-stream = "0.1.12"
toml = "0.7.3"
clap = { version = "4.2.1", features = ["cargo"] }
serde = { version = "1.0.159", feaures = ["derive"] }
serde_derive = "1.0.159"
regex = "1.7.3"
